fix: scrollbar multiline

--- a/packages/core/src/style/overrides/material/_form-field.scss
+++ b/packages/core/src/style/overrides/material/_form-field.scss
@@ -123,4 +123,17 @@
       }
     }
   }
+
+  .mat-mdc-input-element {
+    &::-webkit-scrollbar {
+      background-color: transparent;
+      width: 8px;
+      height: auto;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background: var(--sdg-color-blue-piv);
+      border-radius: 4px;
+    }
+  }
 }
